// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/basic.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({ redBold: { color: 'red', fontWeight: 'bold' } })
</script>
<script setup lang="ts">
import { create as _stylex_create, props as _stylex_props } from '@stylexjs/stylex'

</script>

<template>
  <p><span v-bind="_stylex_props(styles.redBold)">Red</span> Text</p>
</template>
"
`;

exports[`fixtures > ./fixtures/multiple-rules.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({
  red: { color: 'red' },
  bold: { fontWeight: 'bold' },
})
</script>
<script setup lang="ts">
import { create as _stylex_create, props as _stylex_props } from '@stylexjs/stylex'

</script>

<template>
  <p><span v-bind="_stylex_props(styles.red, styles.bold)">Red</span> Text</p>
</template>
"
`;

exports[`fixtures > ./fixtures/optional-rules.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({
  red: { color: 'red' },
  bold: { fontWeight: 'bold' },
})
</script>
<script setup lang="ts">
import { create as _stylex_create, props as _stylex_props } from '@stylexjs/stylex'
defineProps<{ bold?: boolean }>()

</script>

<template>
  <p><span v-bind="_stylex_props(styles.red, bold && styles.bold)">Red</span> Text</p>
</template>
"
`;
